--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,3 +95,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
+dependency_overrides:
+  isar_flutter_libs:
+    path: packages/isar_flutter_libs
