--- a/packages/isar_flutter_libs/android/build.gradle
+++ b/packages/isar_flutter_libs/android/build.gradle
@@ -24,7 +24,7 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 30
 
-    namespace 'dev.isar.flutter_libs'
+    namespace 'dev.isar.isar_flutter_libs'
 
     defaultConfig {
         minSdkVersion 16
